<resources>
    <string name="app_name">GameEngine1</string>
    <string name="title_question">Question</string>
    <string name="category_question">Category</string>
    <string name="question">You have 5 chances to survive. Start now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over">Game over</string>
    <string name="status">Number of lives: 5</string>

</resources>
